# Client-Side-Encrypted-Cloud

./: .gitignore  CMakeLists.txt  README.md
client-gui/: index.html  mock_cli.js  package-lock.json  package.json  server.js  start_all.js  vite.config.js
client-gui/src/: App.jsx  index.css
client-gui/src/components/: BackupView.jsx  CloudView.jsx  DownloadView.jsx  LedgerView.jsx  VerifyView.jsx
server/: app.js  package-lock.json  package.json
src/: CMakeLists.txt  main.cpp
src/chunker/: chunker.cpp  chunker.h
src/cli/: commands.cpp  commands.h
src/crypto/: encryptor.cpp  encryptor.h  key_manager.cpp  key_manager.h
src/ledger/: ledger.cpp  ledger.h  manifest.cpp  manifest.h
src/merkle/: merkle_tree.cpp  merkle_tree.h
src/storage/: downloader.cpp  downloader.h  uploader.cpp  uploader.h
src/utils/: file_utils.cpp  file_utils.h  json_utils.cpp  json_utils.h
